--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
+/*
 
+paleta colores
+
+Rosewater
+#E8B4B8
+
+Dusty Rose
+#EED6D3
+
+Coffee Pot
+#A49393
+
+Coffee Pot
+#67595E
+*/
 .top-banner img{
     height: 100px;
     margin:15px 0;
@@ -16,3 +31,29 @@
 .active[data-content] {
     display: block;
 }
+
+section{
+    margin-top: 0;
+}
+
+.card-body img{
+    /**/
+}
+
+.filter{
+    background-color: #f5e1e3;
+    border-radius:15px;
+}
+
+.precio-antes{
+    color: red;
+    text-decoration:  line-through;
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+
+.precio-oferta{
+    color: #5a5967;
+    font-weight: bolder;
+    font-size: 1.3rem;
+}   
