--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,12 @@ Coffee Pot
 Coffee Pot
 #67595E
 */
-.top-banner img{
+.top-banner img {
     height: 100px;
-    margin:15px 0;
+    margin: 15px 0;
 }
 
-.nav-item{
+.nav-item {
     padding: inherit 3rem;
     cursor: pointer;
 }
@@ -32,28 +32,36 @@ Coffee Pot
     display: block;
 }
 
-section{
+section {
     margin-top: 0;
 }
 
-.card-body img{
+.card-body img {
     /**/
 }
 
-.filter{
+.filter {
     background-color: #f5e1e3;
-    border-radius:15px;
+    border-radius: 15px;
 }
 
-.precio-antes{
+.precio-antes {
     color: red;
-    text-decoration:  line-through;
+    text-decoration: line-through;
     font-weight: bold;
     font-size: 0.8rem;
 }
 
-.precio-oferta{
+.precio-oferta {
     color: #5a5967;
     font-weight: bolder;
     font-size: 1.3rem;
-}   
+}
+
+.card {
+    transition: box-shadow 0.5s;
+}
+
+.card:hover {
+    box-shadow: 0 0 15px rgba(33, 33, 33, .3);
+}
