--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ section {
 
 .filter {
     background-color: #f5e1e3;
-    border-radius: 15px;
+    /* border-radius: 15px; */
 }
 
 .precio-antes {
